--- a/index.html
+++ b/index.html
@@ -36,6 +36,30 @@
             <h1>すごい</h1>
             <p>とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。</p>
           </section>
+
+          <section class="memders">
+            <h1>メンバー紹介</h1>
+
+            <ul>
+              <li>
+                <img src="img/member1.png">
+                <h2>山田太郎</h2>
+                <p>頑張ります。頑張ります。頑張ります。</p>
+              </li>
+              <li>
+                <img src="img/member2.png">
+                <h2>山田次郎</h2>
+                <p>頑張ります。頑張ります。頑張ります。</p>
+              </li>
+              <li>
+                <img src="img/member3.png">
+                <h2>山田花子</h2>
+                <p>頑張ります。頑張ります。頑張ります。</p>
+              </li>
+            </ul>
+
+
+          </section>
         </div>
       </section>
     </body>
