--- a/index.html
+++ b/index.html
@@ -2,65 +2,91 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
+    <!--スマホの画面幅を表示領域に合わせる-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>すごいアプリ</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="favicon.ico">
   </head>
   <body>
     <header>
-      <h1>すごいアプリ</h1>
-      <P>ウルトラすごい最高アプリです</P>
-      <!--リンク-->
-      <a href="" class="btn">ダウンロード</a>
-      <img src="img/top.png">
+      <div class="container">
+        <div class="info">
+          <h1>すごいアプリ</h1>
+          <p>ウルトラすごい最高なアプリです</p>
+          <!--リンク-->
+          <a href="" class="btn">ダウンロード</a>
+        </div>
+        <div class="pic">
+          <img src="img/top.png">
+        </div>
+      </div>
     </header>
 
     <section class="features">
       <h1>すごい特徴</h1>
 
         <div class="container">
-
           <section>
-            <img src="img/feature1.png">
-            <h1>すごい</h1>
-            <p>とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。</p>
-          </section>
-
-          <section>
-            <img src="img/feature2.png">
-            <h1>すごい</h1>
-            <p>とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。</p>
+            <div class="pic">
+              <img src="img/feature1.png">
+            </div>
+            <div class="info">
+              <h1>すごい</h1>
+              <p>とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。</p>
+            </div>
           </section>
 
           <section>
-            <img src="img/feature3.png">
-            <h1>すごい</h1>
-            <p>とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。</p>
+            <div class="pic">
+              <img src="img/feature2.png">
+            </div>
+            <div class="info">
+              <h1>すごい</h1>
+              <p>とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。</p>
+            </div>
           </section>
 
-          <section class="memders">
-            <h1>メンバー紹介</h1>
-
-            <ul>
-              <li>
-                <img src="img/member1.png">
-                <h2>山田太郎</h2>
-                <p>頑張ります。頑張ります。頑張ります。</p>
-              </li>
-              <li>
-                <img src="img/member2.png">
-                <h2>山田次郎</h2>
-                <p>頑張ります。頑張ります。頑張ります。</p>
-              </li>
-              <li>
-                <img src="img/member3.png">
-                <h2>山田花子</h2>
-                <p>頑張ります。頑張ります。頑張ります。</p>
-              </li>
-            </ul>
-
-
+          <section>
+            <div class="pic">
+              <img src="img/feature3.png">
+            </div>
+            <div class="info">
+              <h1>すごい</h1>
+              <p>とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。</p>
+            </div>
           </section>
+
         </div>
       </section>
-    </body>
+
+      <section class="members">
+        <h1>メンバー紹介</h1>
+          <ul>
+            <li>
+              <img src="img/member1.png">
+              <h2>山田太郎</h2>
+              <p>頑張ります。頑張ります。頑張ります。</p>
+            </li>
+            <li>
+              <img src="img/member2.png">
+              <h2>山田二郎</h2>
+              <p>頑張ります。頑張ります。頑張ります。</p>
+            </li>
+            <li>
+              <img src="img/member3.png">
+              <h2>山田花子</h2>
+              <p>頑張ります。頑張ります。頑張ります。</p>
+            </li>
+          </ul>
+      </section>
+      <section class="call-to-action">
+        <h1>いますぐダウンロードしよう</h1>
+        <a href="" class="btn">ダウンロード</a>
+      </section>
+
+      <footer>
+        (c) dotinstall.com
+      </footer>
+  </body>
 </html>
